<resources>
    <string name="app_name" translatable="false">TvShowcase</string>

    <!-- Tabs -->
    <string name="tab_schedule_title">Agenda</string>
    <string name="tab_discovery_title">Descobrir</string>
    <string name="tab_profile_title">Perfil</string>

    <!-- Schedule -->
    <string name="schedule_season_prefix">S%1$s</string>
    <string name="schedule_season_fullprefix">Season %1$s</string>
    <string name="schedule_episode_prefix">E%1$s</string>
    <string name="schedule_episode_fullprefix">Episode %1$s</string>
    <string name="schedule_separator">|</string>

    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="search_hint">Search a show</string>
    <string name="search_result">Search for: %1$s</string>

    <!-- Show detail -->
    <string name="show_description">Description</string>
    <string name="show_characters">Cast</string>
    <string name="add_show">ADD SHOW</string>

    <!-- Error state -->
    <string name="error_title">Something went wrong</string>
    <string name="error_description">An error occurred, please try again later</string>
    <string name="error_retry">Try again</string>

    <!-- Empty state -->
    <string name="empty_title">Save your favorite shows</string>
    <string name="empty_description">Your favorites list will be shown here</string>

    <!-- Common -->
    <string name="common_minutes">%1$d min</string>
    <string name="favorite_show">Add show to favorite list</string>
    <string name="unfavorite_show">Remove show from favorite list</string>
</resources>
