<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle" />

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/loading"
        style="@style/ProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/error"
        layout="@layout/error_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_unfavorite"
        android:visibility="invisible"
        app:backgroundTint="@color/white"
        app:fabSize="mini"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/holo_red_light"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no"
        android:text="@string/add_show"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"
        app:icon="@drawable/ic_add_show"
        app:iconTint="@color/white"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="124dp"
                android:layout_height="188dp"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/guide_top" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/poster_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:barrierMargin="16dp"
                app:constraint_referenced_ids="poster" />

            <TextView
                android:id="@+id/status"
                style="@style/TextTitle"
                android:layout_width="0dp"
                app:drawableStartCompat="@drawable/ic_label"
                app:drawableTint="@color/red"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/poster_barrier"
                app:layout_constraintTop_toTopOf="@id/poster" />

            <TextView
                android:id="@+id/genres"
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                app:drawableStartCompat="@drawable/ic_genre"
                app:drawableTint="@color/red"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/poster_barrier"
                app:layout_constraintTop_toBottomOf="@id/status" />

            <TextView
                android:id="@+id/rate"
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                app:drawableStartCompat="@drawable/ic_rate"
                app:drawableTint="@color/red"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/poster_barrier"
                app:layout_constraintTop_toBottomOf="@id/genres" />

            <TextView
                android:id="@+id/average_runtime"
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                app:drawableStartCompat="@drawable/ic_timer"
                app:drawableTint="@color/red"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/poster_barrier"
                app:layout_constraintTop_toBottomOf="@id/rate" />

            <TextView
                android:id="@+id/network"
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                app:drawableStartCompat="@drawable/ic_tv"
                app:drawableTint="@color/red"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/poster_barrier"
                app:layout_constraintTop_toBottomOf="@id/average_runtime" />

            <TextView
                android:id="@+id/time"
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                app:drawableStartCompat="@drawable/ic_time"
                app:drawableTint="@color/red"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/poster_barrier"
                app:layout_constraintTop_toBottomOf="@id/network" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/show_description"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/poster" />

            <at.blogc.android.views.ExpandableTextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="5"
                app:animation_duration="250"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/description_title" />

            <com.rafagnin.tvshowcase.custom.NoScrollExListView
                android:id="@+id/seasons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="1dp"
                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/characters_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/show_characters"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/seasons" />

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="56dp"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characters_title">

                <LinearLayout
                    android:id="@+id/characters"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
